# Xtensor.R

./: .Rbuildignore  .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md  azure-pipelines.yml  configure  configure.win  environment-dev.yml
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  unix-build.yml
.github/actions/unix_impl/: action.yml
.github/workflows/: linux.yml  osx.yml  unix_impl.yml  windows.yml
R/: RcppExports.R  aaa.R
inst/include/: xtensor.h
man/: xtensor-package.Rd
src/: Makevars  Makevars.win  RcppExports.cpp  test-arithmetic.cpp  test-in-place.cpp  test-optional.cpp  test-reshape.cpp  test-types.cpp  xtensor_r_example.cpp
tests/: testthat.R
tests/testthat/: test-arithmetic.R  test-in-place.R  test-optional.R  test-reshape.R  test-types.R
tools/: 0001-Remove-pragmas.patch  vendor
